tests/sources/invalid/types/semantic_unary_incdec_undefined.fire
// Semantic type error: increment/decrement on an undefined variable.

fn unary_incdec_undefined() -> void {
    undefinedCounter++;  //~ ERROR FS-PARSE-0003 @5
}
